access: mmsh: fix error handling logic in OpenConnection

When vlc_tls_Write fails, the socket is closed, but the 'sock' pointer
was not set to NULL. Instead, 'stream' was set to NULL, which seems
to be a typo.

This caused two issues:
1. Coverity flagged the return statement as dead code because 'sock'
   was never NULL at that point.
2. The function returned VLC_SUCCESS even when the connection failed.

This patch fixes the typo by setting sock to NULL on error.

Fixes #29336

Signed-off-by: Abderhman Gamal <abderhmangamal246@gmail.com>